# MyFTP

./: CMakeLists.txt  Makefile  README.md
src/: error.c  logger.c  my_ftp.h  socket.c  utils.c
src/client/: auth.c  client.c  client.h  init.c  input.c  main.c  msg_transfer.c  pasv_actv.c  socket_data.c  tokenizer.c
src/client/commands/: command_cd.c  command_clear.c  command_get.c  command_help.c  command_ls.c  command_passive.c  command_put.c  command_pwd.c  command_quit.c
src/server/: client.c  main.c  server.c  server.h  socket_data.c  tokenizer.c
src/server/commands/: command_cdup.c  command_cwd.c  command_dele.c  command_help.c  command_list.c  command_noop.c  command_pass.c  command_pasv.c  command_port.c  command_pwd.c  command_quit.c  command_retr.c  command_stor.c  command_type.c  command_user.c  no_command.c
